--- a/footer_en.html
+++ b/footer_en.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-50 text-[var(--text-secondary-color)] px-10 py-12">
+<footer class="bg-[var(--background-secondary-color)] text-[var(--text-secondary-color)] px-10 py-12 transition-colors duration-300">
 <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
 <div class="col-span-1 md:col-span-1">
 <a class="flex items-center gap-3 text-2xl font-bold tracking-tight text-[var(--text-primary-color)]" href="index_en.html">
@@ -34,7 +34,7 @@
 </ul>
 </div>
 </div>
-<div class="mt-12 pt-8 border-t border-[var(--divider-color)] text-center text-sm">
+<div class="mt-12 pt-8 border-t border-[var(--border-color)] text-center text-sm transition-colors duration-300">
 <p>© 2024 Ekobol. All rights reserved.</p>
 </div>
 </footer>
