--- a/solutions.html
+++ b/solutions.html
@@ -41,7 +41,7 @@
                 <div>
                     <h2 class="text-3xl font-bold mb-4">Girişimci Ruhlar İçin: Temel Plan</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">Kontrolü elinizde tutmayı seviyor ama tekrarlayan işlerden nefret ediyorsunuz. Temel planımız, yalnızca %10 gelir payı karşılığında yapay zeka destekli platformumuza tam erişim sağlar. Stratejinizi siz yönetin, biz sıkıcı görevleri otomatikleştirelim ve size en değerli varlığınız olan zamanı geri verelim.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Temel Planı Keşfedin →</a>
+                    <a href="basic-plan.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Temel Planı Keşfedin →</a>
                 </div>
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8">
                     <div class="text-center">
@@ -55,14 +55,14 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8 order-last md:order-first">
                     <div class="text-center">
-                        <svg class="h-12 w-12 text-gray-400 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.708c-1.21-.092-2.43-.138-3.662-.138s-2.451.046-3.662.138a4.006 4.006 0 00-3.7 3.708c-.092 1.21-.138 2.43-.138 3.662s.046 2.453.138 3.662a4.006 4.006 0 003.7 3.708c1.21.092 2.43.138 3.662.138s2.451-.046 3.662-.138a4.006 4.006 0 003.7-3.708c.092-1.21.138-2.43.138-3.662z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                        <svg class="h-12 w-12 text-gray-400 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.708c-1.21-.092-2.43-.138-3.662-.138s-2.451.046-3.662.138a4.006 4.006 0 00-3.7 3.708c-.092 1.21-.138 2.43-.138 3.662s.046 2.453.138 3.662a4.006 4.006 0 003.7 3.708c1.21.092 2.43.138 3.662.138s2.451-.046 3.662-.138a4.006 4.006 0 003.7-3.708c.092 1.21.138-2.43.138-3.662z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                         <p class="mt-4 text-gray-500">Biz Dijital Markanıza Odaklanalım. Siz Ürününüze Odaklanın.</p>
                     </div>
                 </div>
                 <div>
                     <h2 class="text-3xl font-bold mb-4">Vizyonerler İçin: Partner Planı</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">Sizin dehanız harika ürünler yaratmak, dijital listelemeleri yönetmek değil. 50/50 Partner planımızla, siz sadece ürünlerinizi üretip gönderin. Gerisini biz hallederiz: markanızı oluşturur, pazarlamanızı yürütür, listelemelerinizi optimize eder ve tüm dijital operasyonları yönetiriz. İmparatorluğunuzu sizin adınıza biz inşa ederiz.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Partner Olun →</a>
+                    <a href="partner-plan.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Partner Olun →</a>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                 <div>
                     <h2 class="text-3xl font-bold mb-4">İşbirlikçiler İçin: Dinamik Plan</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">İhtiyaçlarınız zamanla değişebilir. Dinamik Plan, siz ve platformumuz arasında paylaşılan iş yüküne dayalı olarak ayarlanabilir bir gelir payı sunar. Siz daha fazla veya daha az iş üstlendikçe, oran da ayarlanır. Bu, büyüyen işletmeler için nihai esnek ortaklıktır.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Dinamik Paylaşım Hakkında Bilgi Edinin →</a>
+                    <a href="dynamic-plan.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Dinamik Paylaşım Hakkında Bilgi Edinin →</a>
                 </div>
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8">
                     <div class="text-center">
