--- a/solutions_en.html
+++ b/solutions_en.html
@@ -41,7 +41,7 @@
                 <div>
                     <h2 class="text-3xl font-bold mb-4">For the Self-Starter: The Basic Plan</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">You love being in control but hate repetitive work. Our Basic plan gives you full access to our AI-powered platform for just a 10% revenue share. You handle your strategy, and we'll automate the tedious tasks, giving you back your most valuable asset: time.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Explore the Basic Plan →</a>
+                    <a href="basic-plan_en.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Explore the Basic Plan →</a>
                 </div>
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8">
                     <div class="text-center">
@@ -55,14 +55,14 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8 order-last md:order-first">
                     <div class="text-center">
-                        <svg class="h-12 w-12 text-gray-400 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.708c-1.21-.092-2.43-.138-3.662-.138s-2.451.046-3.662.138a4.006 4.006 0 00-3.7 3.708c-.092 1.21-.138 2.43-.138 3.662s.046 2.453.138 3.662a4.006 4.006 0 003.7 3.708c1.21.092 2.43.138 3.662.138s2.451-.046 3.662-.138a4.006 4.006 0 003.7-3.708c.092-1.21.138-2.43.138-3.662z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                        <svg class="h-12 w-12 text-gray-400 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.708c-1.21-.092-2.43-.138-3.662-.138s-2.451.046-3.662.138a4.006 4.006 0 00-3.7 3.708c-.092 1.21-.138 2.43-.138 3.662s.046 2.453.138 3.662a4.006 4.006 0 003.7 3.708c1.21.092 2.43.138 3.662.138s2.451-.046 3.662-.138a4.006 4.006 0 003.7-3.708c.092 1.21.138-2.43.138-3.662z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                         <p class="mt-4 text-gray-500">We Focus on Your Digital Brand. You Focus on Your Product.</p>
                     </div>
                 </div>
                 <div>
                     <h2 class="text-3xl font-bold mb-4">For the Visionary: The Partner Plan</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">Your genius is in creating amazing products, not managing digital listings. With our 50/50 Partner plan, you just produce and ship your items. We handle everything else: we build your brand, run your marketing, optimize your listings, and manage all digital operations. We build your empire on your behalf.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Become a Partner →</a>
+                    <a href="partner-plan_en.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Become a Partner →</a>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                 <div>
                     <h2 class="text-3xl font-bold mb-4">For the Collaborator: The Dynamic Plan</h2>
                     <p class="text-lg text-[var(--text-secondary-color)] mb-6">Your needs might change over time. The Dynamic Plan offers an adjustable revenue share based on the workload shared between you and our platform. As you take on more or less of the work, the rate adjusts. It's the ultimate flexible partnership for growing businesses.</p>
-                    <a href="pricing.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Learn about Dynamic Sharing →</a>
+                    <a href="dynamic-plan_en.html" class="font-bold text-[var(--primary-color)] hover:underline text-lg">Learn about Dynamic Sharing →</a>
                 </div>
                 <div class="bg-gray-50 border border-[var(--divider-color)] rounded-lg h-80 flex items-center justify-center p-8">
                     <div class="text-center">
