--- a/basic-plan_en.html
+++ b/basic-plan_en.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="mt-12 text-center">
-                 <p class="text-4xl font-bold mb-4">Just 10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / of revenue</span></p>
+                 <p class="text-4xl font-bold mb-4">Just 10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / of profit</span></p>
                 <p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">You handle your strategy, and we'll automate the tedious tasks, giving you back your most valuable asset: time.</p>
                 <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment_en.html">
                     <span class="truncate">Purchase Basic Plan</span>
