--- a/basic-plan.html
+++ b/basic-plan.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="mt-12 text-center">
-                 <p class="text-4xl font-bold mb-4">Sadece 10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / cirodan</span></p>
+                 <p class="text-4xl font-bold mb-4">Sadece 10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
                 <p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">Stratejinizi siz yönetin, biz sıkıcı görevleri otomatikleştirelim ve size en değerli varlığınız olan zamanı geri verelim.</p>
                 <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment.html">
                     <span class="truncate">Temel Planı Satın Al</span>
