--- a/partner-plan.html
+++ b/partner-plan.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="mt-12 text-center">
-                 <p class="text-4xl font-bold mb-4">50/50 Gelir Paylaşımı</p>
+                 <p class="text-4xl font-bold mb-4">50/50 Kâr Paylaşımı</p>
                 <p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">Siz sadece ürünlerinizi üretip gönderin. Geriye kalan her şeyi biz hallederiz. Gerçek bir ortaklık.</p>
                 <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment.html">
                     <span class="truncate">Partner Planını Satın Al</span>
