--- a/partner-plan_en.html
+++ b/partner-plan_en.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="mt-12 text-center">
-                 <p class="text-4xl font-bold mb-4">50/50 Revenue Share</p>
+                 <p class="text-4xl font-bold mb-4">50/50 Profit Share</p>
                 <p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">You just produce and ship your items. We handle absolutely everything else. A true partnership.</p>
                 <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment_en.html">
                     <span class="truncate">Purchase Partner Plan</span>
