--- a/header_en.html
+++ b/header_en.html
@@ -1,6 +1,6 @@
 <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[var(--border-color)] px-10 py-4 transition-colors duration-300">
     <a class="flex items-center gap-3 text-2xl font-bold tracking-tight" href="index_en.html">
-        <img src="ekobol.ico" alt="Ekobol Logo" class="h-8 w-8">
+        <img src="ekobol.ico" alt="Ekobol Logo" class="h-24 w-24"></a>
         <span>Ekobol</span>
     </a>
     <nav class="hidden md:flex items-center gap-8">
